sp1-custom-table/src/app/shared/components/paginator/client-paginator/client-paginator.component.scss
.paginator {
  display: block;
  height: var(--paginator-height);
  font-size: 12px;
  font-weight: 100;
  line-height: 16px;
  letter-spacing: 0.4px;
}

.paginator-outer-container {
  display: flex;
  height: inherit;
}

.paginator-container {
  display: flex;
  align-items: center;
  padding: 0 8px;
  flex-wrap: wrap;
  width: 100%;
  height: inherit;
  min-height: inherit;
}

.paginator-page-size {
  display: flex;
  align-items: baseline;
}

.paginator-size-label {
  margin: 0 .25rem;
}

.paginator-page-size-select {
  margin: 0 .25rem;
  width: 84px;
}

.paginator-go-to-page {
  display: flex;
  align-items: baseline;
  margin-right: 2rem;
}

.paginator-go-to-page-input {
  margin: 0 .25rem;
  width: 84px;
  font-size: 12px;
}

.paginator-range-actions {
  display: flex;
  align-items: center;
  height: var(--paginator-range-actions-height);
}

// .paginator-page-display {
//   width: calc(var(--paginator-height) - calc(var(--paginator-height) * 0.29));
//   height: calc(var(--paginator-height) - calc(var(--paginator-height) * 0.29));
//   border: 1px solid currentcolor;
//   border-radius: 21px;
//   margin: .25rem;
//   display: flex;
//   align-items: center;
//   justify-content: center;
// }

.paginator-range-label {
  margin: 0 2rem 0 1.5rem;
}

.mat-mdc-select {
  line-height: 1.5;
  font-size: 12px;
}

mat-form-field.small {
  --mat-form-field-container-height: 41px;
  --mat-form-field-container-vertical-padding: 8px;
}

